--- a/assignment1/configs/config.yaml
+++ b/assignment1/configs/config.yaml
@@ -4,6 +4,9 @@ defaults:
   - experiments: null
   - func: null
 
+
 work_dir: ${hydra:runtime.cwd}
 print_config: True
 seed: 87
+test_size: .2
+cv_splits: 5
