added learning curve plot

--- a/assignment1/configs/config.yaml
+++ b/assignment1/configs/config.yaml
@@ -4,9 +4,14 @@ defaults:
   - experiments: null
   - func: null
 
+evaluation:
+  model:
+    _target_: 
 
-work_dir: ${hydra:runtime.cwd}
+run_dir: ./outputs/${now:%Y-%m-%d}/${now:%H-%M-%S}
 print_config: True
 seed: 87
 test_size: .2
-cv_splits: 5
+cv_splits: 10
+cv_repeats: 50
+
