--- a/assignment1/configs/config.yaml
+++ b/assignment1/configs/config.yaml
@@ -4,7 +4,11 @@ defaults:
   - experiments: null
   - func: null
 
-run_dir: ./outputs/${now:%Y-%m-%d}/${now:%H-%M-%S}
+hydra:
+  run:
+    dir: ./outputs/${experiments.model_name}/${experiments.datamodule.name}/${func}/${now:%Y-%m-%d}/${now:%H-%M-%S}
+# run_dir: ./outputs/${now:%Y-%m-%d}/${now:%H-%M-%S}
+run_dir: ./outputs/${experiments.model_name}/${experiments.datamodule.name}/${func}/${now:%Y-%m-%d}/${now:%H-%M-%S}
 print_config: True
 seed: 87
 test_size: .2
