--- a/assignment1/configs/config.yaml
+++ b/assignment1/configs/config.yaml
@@ -7,12 +7,10 @@ defaults:
 
 hydra:
   run:
-    dir: outputs/${hydra.job.override_dirname}/${now:%Y-%m-%d-%H-%M-%S}
+    dir: multirun/${experiments.dataset_name}/${experiments.model_name}/${func}/${now:%Y-%m-%d-%H-%M-%S}
   sweep:
-    dir: outputs/${hydra.job.override_dirname}
+    dir: multirun/${experiments.dataset_name}/${experiments.model_name}/${func}/${now:%Y-%m-%d-%H-%M-%S}
     subdir: ${now:%Y-%m-%d-%H-%M-%S}
-# run_dir: ./outputs/${now:%Y-%m-%d}/${now:%H-%M-%S}
-# run_dir: ${hydra.job.override_dirname}
 print_config: True
 seed: 87
 test_size: .2
