--- a/assignment1/configs/experiments/nn-1.yaml
+++ b/assignment1/configs/experiments/nn-1.yaml
@@ -1,9 +1,9 @@
 # Used for log path
-model_name: NNModel
+model_name: NeuralNetworkModel
 dataset_name: ${dataset.name}
 
 datamodule: 
-  _target_: src.datamodules.KNNData
+  _target_: src.datamodules.NeuralNetworkData
   name: ${dataset.name}
   path: ${dataset.path}
   target: ${dataset.target}
@@ -13,19 +13,24 @@ datamodule:
   test_size: ${test_size}
 
 model:
-  _target_: src.models.KNNModel
-  weights: distance
-  leaf_size: 30
-  p: 2
+  _target_: src.models.NeuralNetworkModel
+  layers: 2 
+  nodes: 100 
+  dropout_rate: 0.25
+  validation_size: 0.2
+  seed: ${seed}
+  lr: 0.001
+  patience: 3
+  batch_size: 10
 
 evaluation:
   validation_curve:
-    n_neighbors:
-      start: 5
-      stop: 50
-      step: 10
-    algorithm:
-      start: 0
-      stop: 3
+    layers:
+      start: 2
+      stop: 5
       step: 1
+    nodes:
+      start: 25
+      stop: 300
+      step: 50
 
