--- a/assignment1/configs/experiments/boost-1.yaml
+++ b/assignment1/configs/experiments/boost-1.yaml
@@ -1,6 +1,7 @@
 # Used for log path
 model_name: BoostingModel
 dataset_name: ${dataset.name}
+experiment_name: boost-1
 
 datamodule: 
   _target_: src.datamodules.BoostingData
