--- a/assignment1/configs/experiments/knn-1.yaml
+++ b/assignment1/configs/experiments/knn-1.yaml
@@ -1,6 +1,7 @@
 # Used for log path
 model_name: KNNModel
 dataset_name: ${dataset.name}
+experiment_name: knn-1
 
 datamodule: 
   _target_: src.datamodules.KNNData
