--- a/assignment1/configs/experiments/nn-1.yaml
+++ b/assignment1/configs/experiments/nn-1.yaml
@@ -1,6 +1,7 @@
 # Used for log path
 model_name: NeuralNetworkModel
 dataset_name: ${dataset.name}
+experiment_name: nn-1
 
 datamodule: 
   _target_: src.datamodules.NeuralNetworkData
