--- a/assignment1/configs/experiments/svm-1.yaml
+++ b/assignment1/configs/experiments/svm-1.yaml
@@ -1,6 +1,7 @@
 # Used for log path
 model_name: SVM
 dataset_name: ${dataset.name}
+experiment_name: svm-1
 
 datamodule: 
   _target_: src.datamodules.SVMData
