--- a/assignment1/configs/experiments/tree-3.yaml
+++ b/assignment1/configs/experiments/tree-3.yaml
@@ -1,12 +1,12 @@
 defaults:
   - _self_
-  - dataset: _1_
+  - dataset: _2_
 # Used for log path
 model_name: DecisionTreeModel
 dataset_name: ${experiments.dataset.name}
-experiment_name: tree-1
+experiment_name: tree-3
 
-datamodule:
+datamodule: 
   _target_: src.datamodules.DecisionTreeData
   name: ${experiments.dataset.name}
   path: ${experiments.dataset.path}
@@ -15,10 +15,10 @@ datamodule:
   cv_splits: ${experiments.dataset.cv_splits}
   cv_repeats: ${experiments.dataset.cv_repeats}
   test_size: ${test_size}
+  produce_ds2_small: false
 
 model:
   _target_: src.models.DecisionTreeModel
-
   random_state: ${seed}
   # Experiment Parameters
   # Default params
@@ -28,10 +28,10 @@ model:
   # min_samples_leaf: 1
   class_weight: "balanced"
   # Grid-search results
-  max_depth: 6
-  ccp_alpha: 0.0004
-  min_samples_split: 91
-  min_samples_leaf: 17
+  max_depth: 8
+  ccp_alpha: 0.0
+  min_samples_split: 178
+  min_samples_leaf: 44
 
 evaluation:
 
@@ -52,21 +52,3 @@ evaluation:
       start:  1
       stop: 500
       step:  25
-
-  grid_search:
-    max_depth:
-      start: 4
-      stop:  7
-      step:  1
-    ccp_alpha:
-      start: 0.0
-      stop:  0.0011
-      step:  0.0001
-    min_samples_split:
-      start: 85
-      stop:  96
-      step:   1
-    min_samples_leaf:
-      start: 15
-      stop:  26
-      step:   1
