--- a/assignment1/multirun/_2_/SVM/svm-2/.hydra/hydra.yaml
+++ b/assignment1/multirun/_2_/SVM/svm-2/.hydra/hydra.yaml
@@ -123,12 +123,12 @@ hydra:
     hydra:
     - hydra.mode=RUN
     task:
-    - +func=vc
+    - +func=lc
     - experiments=svm-2
   job:
     name: run
     chdir: null
-    override_dirname: +func=vc,experiments=svm-2
+    override_dirname: +func=lc,experiments=svm-2
     id: ???
     num: ???
     config_name: config.yaml
