--- a/assignment1/configs/experiments/tree-2.yaml
+++ b/assignment1/configs/experiments/tree-2.yaml
@@ -4,7 +4,7 @@ defaults:
 # Used for log path
 model_name: DecisionTreeModel
 dataset_name: ${experiments.dataset.name}
-experiment_name: tree-2
+experiment_name: tree-3
 
 datamodule: 
   _target_: src.datamodules.DecisionTreeData
@@ -15,7 +15,6 @@ datamodule:
   cv_splits: ${experiments.dataset.cv_splits}
   cv_repeats: ${experiments.dataset.cv_repeats}
   test_size: ${test_size}
-  produce_ds2_small: true
 
 model:
   _target_: src.models.DecisionTreeModel
@@ -52,21 +51,7 @@ evaluation:
       start:  1
       stop: 500
       step:  25
-
-  grid_search:
-    max_depth:
-      start: 7
-      stop:  10
-      step:  1
-    ccp_alpha:
-      start: 0.0
-      stop:  0.0011
-      step:  0.0002
-    min_samples_split:
-      start: 175
-      stop:  185
-      step:   1
-    min_samples_leaf:
-      start: 35
-      stop:  45
-      step:   1
+  learning_curve:
+    start: .1
+    stop: 1.001
+    step: .01
