--- a/assignment1/multirun/_2_/DecisionTreeModel/tree-2/.hydra/hydra.yaml
+++ b/assignment1/multirun/_2_/DecisionTreeModel/tree-2/.hydra/hydra.yaml
@@ -123,12 +123,12 @@ hydra:
     hydra:
     - hydra.mode=RUN
     task:
-    - +func=lc
-    - experiments=tree-2
+    - +func=vc
+    - experiments=tree-3
   job:
     name: run
     chdir: null
-    override_dirname: +func=lc,experiments=tree-2
+    override_dirname: +func=vc,experiments=tree-3
     id: ???
     num: ???
     config_name: config.yaml
@@ -153,10 +153,10 @@ hydra:
     - path: ''
       schema: structured
       provider: schema
-    output_dir: /Users/chrisfarr/Desktop/gatech/OMSCS-ML-CS-7641/assignment1/multirun/_2_/DecisionTreeModel/tree-2
+    output_dir: /Users/chrisfarr/Desktop/gatech/OMSCS-ML-CS-7641/assignment1/multirun/_2_/DecisionTreeModel/tree-3
     choices:
       func: null
-      experiments: tree-2
+      experiments: tree-3
       experiments/dataset: _2_
       hydra/env: default
       hydra/callbacks: null
