--- a/assignment1/configs/experiments/boost-1.yaml
+++ b/assignment1/configs/experiments/boost-1.yaml
@@ -19,16 +19,36 @@ datamodule:
 model:
   _target_: src.models.BoostingModel
   random_state: ${seed}
+  # Params for validation curve
+  # base_estimator_params: 
+  #   max_depth: 1
+  # Params for learning curve (fine-tuned)
   base_estimator_params: 
     max_depth: 1
-
+  learning_rate: 0.14
+  n_estimators: 28
 
 evaluation:
   validation_curve:
     n_estimators:
-      start: 10
-      stop: 200
-      step: 25
+      start: 1
+      stop: 400
+      step: 10
+    learning_rate:
+      start: 0.01
+      stop: .51
+      step: 0.01
+
+  grid_search:
+    n_estimators:
+      start: 15
+      stop: 30
+      step: 1
+    learning_rate:
+      start: 0.05
+      stop: .15
+      step: 0.01
+
   learning_curve:
     start: .1
     stop: 1.001
