--- a/assignment1/configs/experiments/boost-2.yaml
+++ b/assignment1/configs/experiments/boost-2.yaml
@@ -1,29 +1,70 @@
+defaults:
+  - _self_
+  - dataset: _2_
 # Used for log path
 model_name: BoostingModel
-dataset_name: ${dataset.name}
-experiment_name: boost-1
+dataset_name: ${experiments.dataset.name}
+experiment_name: boost-2
 
 datamodule: 
   _target_: src.datamodules.BoostingData
-  name: ${dataset.name}
-  path: ${dataset.path}
-  target: ${dataset.target}
+  name: ${experiments.dataset.name}
+  path: ${experiments.dataset.path}
+  target: ${experiments.dataset.target}
   seed: ${seed}
-  cv_splits: ${dataset.cv_splits}
-  cv_repeats: ${dataset.cv_repeats}
+  cv_splits: ${experiments.dataset.cv_splits}
+  cv_repeats: ${experiments.dataset.cv_repeats}
   test_size: ${test_size}
+  produce_ds2_small: false  # Use small while exploring
 
 model:
   _target_: src.models.BoostingModel
   random_state: ${seed}
+  # Params for validation curve
+  # base_estimator_params: 
+  #   max_depth: 1
+  # Params for learning curve (fine-tuned)
   base_estimator_params: 
-    max_depth: 1
-
+    max_depth: 2
+  learning_rate: 0.25
+  n_estimators: 700
 
 evaluation:
   validation_curve:
     n_estimators:
-      start: 10
-      stop: 200
-      step: 25
+      start: 1
+      stop: 501
+      step: 50
+    learning_rate:
+      start: 0.01
+      stop: 1.1
+      step: 0.05
 
+  grid_search:
+    # Round 1
+    # n_estimators:
+    #   start: 75
+    #   stop: 400
+    #   step: 100
+    # learning_rate:
+    #   start: 0.20
+    #   stop: .30
+    #   step: 0.02
+    # Round 2
+    n_estimators:
+      start: 100
+      stop: 801
+      step: 200
+    learning_rate:
+      start: 0.25
+      stop: 0.45
+      step: 0.10
+    base_estimator__max_depth:
+      start: 1
+      stop: 3
+      step: 1
+
+  learning_curve:
+    start: .1
+    stop: 1.001
+    step: .10
