--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,4 @@ hydra-core
 hydra-joblib-launcher
 joblib
 mlrose # https://stackoverflow.com/questions/61867945/python-import-error-cannot-import-name-six-from-sklearn-externals
+networkx
