--- a/assignment3/multirun/_1_/NeuralNetworkModel/proj-km-rand-clust-1/.hydra/config.yaml
+++ b/assignment3/multirun/_1_/NeuralNetworkModel/proj-km-rand-clust-1/.hydra/config.yaml
@@ -17,6 +17,7 @@ experiments:
     random_clusters: 60
     normalize_clusters: true
     plot_name: Random-Projections->KM->Lasso
+    lasso_alpha: 0.01
     cluster:
     - _target_: sklearn.cluster.KMeans
       n_clusters: 10
